bidview slider maxrange alignment issue fixed

--- a/assets/home/css/style.css
+++ b/assets/home/css/style.css
@@ -240,7 +240,7 @@ figure {
 	display: flex;
 	margin-bottom: 10px;
 	padding: 0 12px;
-	width:360px;
+	width:310px;
 }
 /*.bid-tab .tab-content .pass-info .bid-radio{
 	margin-bottom: 3em;
